--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,61 +1,61 @@
-<form>
+<form [formGroup]="registerForm" (ngSubmit)="submit()">
   <!-- Name -->
   <div class="mb-3">
     <label class="inline-block mb-2">Name</label>
-    <input
-      type="text"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Enter Name"
-    />
+    <app-input [control]="name" placeholder="Enter Name"></app-input>
   </div>
   <!-- Email -->
   <div class="mb-3">
     <label class="inline-block mb-2">Email</label>
-    <input
+    <app-input
+      [control]="email"
       type="email"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Enter Email"
-    />
-  </div>
-  <!-- Age -->
-  <div class="mb-3">
-    <label class="inline-block mb-2">Age</label>
-    <input
-      type="number"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="20"
-    />
-  </div>
-  <!-- Password -->
-  <div class="mb-3">
-    <label class="inline-block mb-2">Password</label>
-    <input
-      type="password"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Password"
-    />
-  </div>
-  <!-- Confirm Password -->
-  <div class="mb-3">
-    <label class="inline-block mb-2">Confirm Password</label>
-    <input
-      type="password"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Confirm Password"
-    />
+    ></app-input>
   </div>
   <!-- Phone Number -->
   <div class="mb-3">
     <label class="inline-block mb-2">Phone Number</label>
-    <input
-      type="text"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+    <app-input
+      [control]="phoneNumber"
       placeholder="Enter Phone Number"
-    />
+      mask="(000)000-00-00"
+      prefix="+38"
+      [validation]="true"
+    ></app-input>
+  </div>
+  <!-- Age -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Age</label>
+    <app-input
+      [control]="age"
+      type="number"
+      min="0"
+      placeholder="20"
+    ></app-input>
+  </div>
+  <!-- Password -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Password</label>
+    <app-input
+      [control]="password"
+      [isPassword]="true"
+      placeholder="Password"
+    ></app-input>
+  </div>
+  <!-- Confirm Password -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Confirm Password</label>
+    <app-input
+      [control]="confirmPassword"
+      [isPassword]="true"
+      placeholder="Confirm Password"
+    ></app-input>
   </div>
   <button
     type="submit"
-    class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500"
+    class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
+    [disabled]="registerForm.invalid"
   >
     Submit
   </button>
