--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,3 +1,7 @@
+<app-alert *ngIf="showAlert" [color]="alertColor">
+  {{ alertMessage }}
+</app-alert>
+
 <form [formGroup]="registerForm" (ngSubmit)="submit()">
   <!-- Name -->
   <div class="mb-3">
@@ -55,7 +59,6 @@
   <button
     type="submit"
     class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
-    [disabled]="registerForm.invalid"
   >
     Submit
   </button>
