--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -2,7 +2,7 @@
   {{ alertMessage }}
 </app-alert>
 
-<form [formGroup]="registerForm" (ngSubmit)="submit()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <!-- Name -->
   <div class="mb-3">
     <label class="inline-block mb-2">Name</label>
@@ -59,6 +59,7 @@
   <button
     type="submit"
     class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
+    [disabled]="registerForm.invalid"
   >
     Submit
   </button>
