--- a/src/app/shared/tabs-container/tabs-container.component.html
+++ b/src/app/shared/tabs-container/tabs-container.component.html
@@ -2,8 +2,8 @@
 <ul class="flex flex-wrap mb-4 gap-4">
   <li class="flex-auto text-center flex-1" *ngFor="let tab of tabs">
     <a
-      class="block rounded py-3 px-4 cursor-pointer transition hover:text-white text-white bg-indigo-400"
-      [ngClass]="{ 'bg-indigo-500 cursor-auto': tab.active }"
+      class="block rounded py-3 px-4 cursor-pointer transition hover:text-white text-white bg-indigo-400 hover:opacity-100"
+      [ngClass]="{ 'bg-indigo-500 cursor-auto opacity-100': tab.active }"
       (click)="selectTab(tab)"
     >
       {{ tab.tabTitle }}
