--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,25 +1,26 @@
-<form>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
   <!-- Email -->
   <div class="mb-3">
     <label class="inline-block mb-2">Email</label>
-    <input
+    <app-input
+      [control]="email"
       type="email"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Enter Email"
-    />
+    ></app-input>
   </div>
   <!-- Password -->
   <div class="mb-3">
     <label class="inline-block mb-2">Password</label>
-    <input
-      type="password"
-      class="block w-full py-2 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+    <app-input
+      [control]="password"
+      [isPassword]="true"
       placeholder="Password"
-    />
+    ></app-input>
   </div>
   <button
     type="submit"
-    class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500"
+    class="block w-full bg-indigo-400 text-white py-3 px-4 mt-6 mb-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
+    [disabled]="loginForm.invalid"
   >
     Submit
   </button>
