ADD: creating new user with Firebase

--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -13,6 +13,7 @@
   <!-- Hide Password Icon -->
   <button
     *ngIf="isPassword"
+    type="button"
     class="absolute top-0 right-0 h-full w-12 flex justify-center items-center bg-indigo-400 hover:bg-indigo-500 rounded-r cursor-pointer"
     (click)="togglePasswordVisibility()"
   >
